tests/reject/newtype_key_mix.ty
# A newtype-keyed map rejects a raw base-typed key: "ana" is not a UserId.
# NOTE: tychoc rejects this; tychoc0 does NOT (it stores zero-cost newtypes as
# their underlying type, so newtype identity is erased at declaration -- a
# documented less-strict limitation, with tychoc as the validating oracle).
# Skip-listed in tests/run.sh's tychoc0 reject check.
type UserId = string

fn main():
    m : [UserId: int] = []
    m["ana"] = 1
    print(str(len(m)) + "\n")
